<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:paddingTop="25dp"
    android:padding="5dp">

    <TableRow
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="5dp">
        <TextView
            android:text="@string/info_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="@dimen/font_subtitle"
            android:textStyle="bold"
            android:textColor="@color/android_green"
            android:layout_span="2"
            />
    </TableRow>

    <TableRow
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:id="@+id/info_description"
            />
    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/info_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <TextView
            android:id="@+id/info_name"
            android:text="@string/info_placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            />
    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/info_vendor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <TextView
            android:id="@+id/info_vendor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_placeholder"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            />
    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/info_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <TextView
            android:id="@+id/info_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_placeholder"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            />
    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/info_power"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <TextView
            android:id="@+id/info_power"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_placeholder"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            />
    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/info_resolution"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <TextView
            android:id="@+id/info_resolution"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_placeholder"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            />
    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/info_max_range"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <TextView
            android:id="@+id/info_max_range"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_placeholder"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            />
    </TableRow>

</TableLayout>